decent improvements in communication and stabilization

--- a/backend/sections/downloads.pug
+++ b/backend/sections/downloads.pug
@@ -1,4 +1,4 @@
-.container-fluid.center
+.container-fluid.centered
     .col-md-6
         a(target="_blank" href="https://chrome.google.com/webstore/detail/yttrex/kbbgjcgdcibilpahljnlejefcehbljnd")
             img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
