--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -1,3 +1,10 @@
+p.centered
+    span.bolder.yt-orange-f This is a SAVAGE ALPHA VERSION, don't use it: it is online only for a small amount of people providing revisions
+    br
+    span.yt-green-b.white This is a SAVAGE ALPHA VERSION, don't use it: it is online only for a small amount of people providing revisions
+    br
+    span.bolder.yt-red-f This is a SAVAGE ALPHA VERSION, don't use it: it is online only for a small amount of people providing revisions
+    
 nav.navbar.navbar-default.navbar-static-top
     div.container
         div.navbar-header
@@ -10,13 +17,15 @@ nav.navbar.navbar-default.navbar-static-top
         div.collapse.navbar-collapse(id="thenavbar")
             ul.nav.navbar-nav
                 li
-                    a(href='/') Home
+                    a(href='/') Hi!
                 li
-                    a(href="https://github.com/tracking-exposed/yttrex") 
+                    a(href='/privacy-statement') Privacy, a.k.a we respect 
+                        s your data
+                        b  You
+                li
+                    a(href="/technicalities") How does it work?
+                li
+                    a(href="https://github.com/tracking-exposed/yttrex") code 
                         img.githublogo(src="/images/github-256.png")
                 li
-                    a(href='https://tracking.exposed') our Manifesto
-                li
-                    a(href='/privacy-statement') how we respect 
-                        s your data
-                        b  you
+                    a(target="_blank" href='https://tracking.exposed') Manifesto ☛ 
