--- a/backend/sections/privacy.pug
+++ b/backend/sections/privacy.pug
@@ -15,10 +15,14 @@ html
   body
     include header
 
-    .container-fluid.center
-        h1 Page not found!
+    .container-fluid
+        h1 How we do respect you?
 
-        h3 You found a broken link! if you feel chatty, please drop a line to 'support @ tracking . exposed' 
-            |, or if you are interested to the internals, look at 
-            a(href="https://github.com/tracking-exposed/yttrex") the code
-            |.
+        ul
+            li You have full access and ability to delete the data you submit
+            li No PII are stored, we want to study how youtube algorithm not you
+            li No IP address or username is stored, we keep associated the video watched to a pseudonym (which is your public key)
+            
+        h3 Public Key
+        p The public key is als
+
