--- a/backend/sections/technicalities.pug
+++ b/backend/sections/technicalities.pug
@@ -57,7 +57,7 @@ html
             .ytslot.centered
                 img(src="/images/extension-installed.png")
 
-    .container-fluid.ytslot.highlight
+    .container-fluid
         h2.right Only from the browser with the extension installed, when you navigate on youtube.com, ytTREX will take a copy of the page.
         h2.left When the copy is done, the logo is display on the right bottom corner for a second, like this:
 
@@ -71,10 +71,35 @@ html
                 i Divergency
                 |  is our main product, it permits you to observe how different personas diverge their informative experience because of the Algorithm
 
-        .col-md-6.ytslot
+        .col-md-6.ytslot.left
+            h2 With 
+                i Divergency
+                |  you can select few videos of yours, and share only that list to someone else. Let's see how it works. In the dotted section, there are screencuts from the ytTREX interface.
 
+    .container-fluid.centered
+        img.screencut(src="/images/select-and-share.png")
 
+    .container-fluid
+        h3 Pro tip: we already know there is personalization based on your profile, but, you can use YouTube also without being logged, or with a browser you never used, or from a public hotspot or via VPN. These informations are only yours and can be used by you and your friends when observing the results.
 
+    .container-fluid.centered
+        img.screencut(src="/images/selected-videos.png")
+
+    .container-fluid
+        h3 The list name is intended to identify the list among the many you can create, try to descrive with few words the test you want to set up.
+
+    .container-fluid.centered
+        img.screencut(src="/images/special-link.png")
+
+    .container-fluid.centered
+        h3.left Every person with the link can provide their contributes pseudo-anonymously, my test user is 'citrus-gnocchi-oatmeal', you should ask to your friends which is their pseudonym. Except if you are doing the test with stranger, in this case you will only get a grasp of the massive differenciation YouTube apply.
+
+        .ytslot.yt-green-b.spaced.white
+            h1 Can you do something else?
+        h1 Of course! you have four tabs in your personal page!
+
+    .container-fluid.centered
+        img.screencut(src="/images/your-videos.png")
 
     .container-fluid.ytslot.yt-red-b.spaced.white
         h2 
