--- a/backend/styles/index.styl
+++ b/backend/styles/index.styl
@@ -44,6 +44,11 @@ img
     max-width 100%
     max-height 100%
 
+.screencut
+    border grey 5px dotted
+    margin 2px
+
+
 .terminal
     text-align left
     font-family monospace !important
