--- a/backend/sections/divergency.pug
+++ b/backend/sections/divergency.pug
@@ -27,25 +27,16 @@ html
         #extension--parsable 
 
         .container-fluid.extension-missing
-            h2.text.negative How much YouTubes' algorithm lead informations to diverge?
-            h2.text.highlight You can now check it out!
-            h2.text.negative Re-Open this page in a browser with installed the ytTREX extension
-            include downloads
-            h2.text.negative This is necessary to collect the evidences of YouTube personalization algorithm: without doing a copy of what is tailored for you, you can't compare how that's diverge from others people
-            h2.text.highlight Note: we collects and study data about YouTube, not about 
-                b
-                    i You
-                |  ;) check out our
-                a(href="/privacy-statement") privacy statement
-                |.
-
-            h2.text.negative ? How does this test works ?
-            h2.text.highlight Someone (maybe your friend, maybe not), we can identify with the psendonym of 
+            h2.text.highlight Psendonym 
                 span.variable.authorName $name
-                |  has selected a list of videos among the various they watched.
-            h2.text.negative With the ytTREX extension installed, you might re-play the same list and then observe the
+                |  has shared a list of videos. The goal is compare YouTube related video,
+
+            h2.text.negative With the ytTREX extension installed, you might re-play the same list and then observe the 
                 a#resultLinks results
                 |. 
+
+        .container-fluid.extension-missing.centered
+            include downloads
 
         .container-fluid.extension-present
             h2.text Welcome back 
@@ -54,13 +45,19 @@ html
             h2.text
                 span.variable.authorName $name
                 |  composed and shared a list of 
-                span.variable#videoNumber $number
+                span.variable.videoNumber $number
                 |  videos. 
 
         .container-fluid
-            #video--list
+            h3.centered Selected video list 
             #video--pretty
 
+        .container-fluid.extension-missing
+            .col-md-6.ytslot.yt-green-b.white.right
+                h1 How much YouTubes' algorithm lead informations to diverge?
+            .col-md-6.ytslot.yt-orange-b.white.left.bolder
+                h1 Now you can check it out!
+    
         .container-fluid
             h2.text.highlight When you start, ytTREX will open automatically the tabs and suspend them after 
                 span.variable#tabtime
