--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -27,6 +27,20 @@ html
 
     include header
     
+    .container-fluid.ytslot.highlight
+        .col-md-4.right
+            h3 
+                i "...I never understand if the algorithm-accountability is paranoia, old-media-babycry, or an actual systemic issue..."
+        .col-md-4.centered.bolder
+            h1 
+                br
+                | These days are over!
+        .col-md-4.left.bolder
+            h2 ytTREX gives you data, instead of aneddoct! Test is out on you
+
+    .container-fluid.spaced
+        include downloads
+
     .container-fluid
         .col-md-6.ytslot.yt-red-b.white.right
             h1 YouTube is a private actor, but is getting a public role in governing how information circulate
@@ -37,28 +51,12 @@ html
                 span.yt-red-f.bolder compare the tailored experiences 
                 | with someone else, different or similar to you
 
-    .container-fluid.ytslot
-        h2.centered.negative Platforms tell us to be 
-            i neutral
-            |, but with their internal techno-politics, they (willingly or not) influence collective phenomena
-        h1.centered We want to keep them accountable!
-        include downloads
-        
-        .col-md-6.ytslot.yt-red-b.white.right
-            h1 "But a commercial platform has all the rights to do bu$ine$$..."
+    .container-fluid.spaced
 
-        .col-md-6.ytslot.yt-green-b.white.left
-            h1 Not the point! We think to the future, who decides for you? based on what? how much you can buy it?
-
-        .ytslot.yt-orange-b.right
-            h1 society decides what is a right and what is an abuse
-                br
-                | ytTREX: 
-                span.white.bolder an educative project 
-                |  to show why techno-politics matter!
-
-        .col-md-6.ytslot.yt-green-b.right
-            h1 Algorithms are political
+        .col-md-6.ytslot.yt-green-b.right.white
+            h2 Algorithms are political
+            h2 You can see their impact
+            h3 This can't be considered just legitimate business interest
 
         .col-md-6.ytslot.yt-red-b.white.left
             h1 Google's promises of 
@@ -69,12 +67,18 @@ html
     .container-fluid.spaced#carosello
         include carousel
 
-    .container-fluid
+    .container-fluid.spaced
         include downloads
+
+    .container-fluid
+        .yt-orange-b
+            h1 Check out how much your suggested video diverge from the one of the others. ytTREX: 
+                span.white.bolder an educative project 
+                |  to show why algorithms matter!
         h2.centered.negative 
             i at this point you should have installed the extension
                 br
-                | [ or check the box below ]
+                | [ or check the boxes below ]
 
     .container-fluid.spaced.bolder
         a(href="/technicalities") 
