the re-play logic is complete and apparently, working

--- a/backend/sections/footer.pug
+++ b/backend/sections/footer.pug
@@ -1,6 +1,6 @@
 .container-fluid.text.footer
     smaller 
-        i know more - 
+        i know more: 
         a(href="https://tracking.exposed") TREX
         |  manifesto - 
         a(href="https://facebook.tracking.exposed") fbTREX
