--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -17,7 +17,7 @@ nav.navbar.navbar-default.navbar-static-top
         div.collapse.navbar-collapse(id="thenavbar")
             ul.nav.navbar-nav
                 li
-                    a(href='/') Hi!
+                    a(href='/') Install
                 li
                     a(href='/privacy-statement') Privacy, a.k.a we respect 
                         s your data
