--- a/backend/sections/divergency.pug
+++ b/backend/sections/divergency.pug
@@ -27,46 +27,54 @@ html
         #extension--parsable 
 
         .container-fluid.extension-missing
-            h2.text.highlight Psendonym 
+            h2.text Welcome! 
                 span.variable.authorName $name
-                |  has shared a list of videos. The goal is compare YouTube related video,
-
-            h2.text.negative With the ytTREX extension installed, you might re-play the same list and then observe the 
-                a#resultLinks results
-                |. 
-
-        .container-fluid.extension-missing.centered
-            include downloads
+                |  has shared a list of 
+                span.variable.videoNumber $number
+                |  videos. The goal is compare of YouTube suggest related video.
 
         .container-fluid.extension-present
             h2.text Welcome back 
                 span.variable#userName $you
-                |,
-            h2.text
+                |: 
                 span.variable.authorName $name
-                |  composed and shared a list of 
+                |  shared a list of 
                 span.variable.videoNumber $number
-                |  videos. 
+                |  videos.
+            h2.text.right Who has this link, can also see the 
+                a.resultLinks results
+                |.
 
-        .container-fluid
-            h3.centered Selected video list 
+        .container-fluid#list
             #video--pretty
 
-        .container-fluid.extension-missing
+        .container-fluid.extension-missing.spaced
             .col-md-6.ytslot.yt-green-b.white.right
                 h1 How much YouTubes' algorithm lead informations to diverge?
             .col-md-6.ytslot.yt-orange-b.white.left.bolder
-                h1 Now you can check it out!
+                h1 Google is not goint to tell you if you don't have any question ;)
     
-        .container-fluid
-            h2.text.highlight When you start, ytTREX will open automatically the tabs and suspend them after 
-                span.variable#tabtime
-                |  seconds. In total, it should take circa 
-                span.variable#humanizedTime
-                |.
-            h2.text.center
-                button#playnow ytTREX re-play!
-                #error Error! video not found, try to reload the page
-            h2.text.negative ytTREX leave to you & your friends the judgmnet if the algorithm is good or not. You can run more accurate analysis playing with cookies, logged vs non-logged profiles, incognito mode, etc...
+        .container-fluid.extension-missing.centered.spaced
+            include downloads
+
+        .container-fluid.ytslot.highlight.extension-missing.text
+            h2 You need to install the ytTREX browser extension, to record what the algoritm suggest to you, and then compare with people of your choice who re-play the same videos.
+            h2.right Who has this link, can also see the  
+                a.resultLinks results
+                |. 
+
+        .container-fluid.extension-present
+            h2.text.highlight#procedure You should click the ► symbol, it will open a video in a new tab and let you play the next one. Feel free to close the videos after 6-10 seconds. 
+
+        .container-fluid.extension-present
+            .col-md-6.yt-green-b.white.ytslot.right
+                h2 ytTREX leave to you the judgment if the algorithm fits or not. 
+                br
+                h2 We assume "only 
+                    span.bolder you 
+                    | know if fits or not. Not us, not Google, not an authority"
+
+            .col-md-6.yt-orange-b.white.ytslot.left
+                h1 You can plan the analysis playing with some variables! such as, clean the cookies, use it non-logged, from incognito mode, from a cafè wifi...
 
         include footer
