completed a first decent alpha

--- a/backend/sections/privacy.pug
+++ b/backend/sections/privacy.pug
@@ -17,12 +17,14 @@ html
 
     .container-fluid
         h1 How we do respect you?
+        h3 
+            ul
+                li You have full access and ability to delete the data you submit (
+                    a(href="https://github.com/tracking-exposed/yttrex/issues/4") not yet
+                    |, please, mail to support at tracking dot exposed to have your data deleted. This is as savage alpha version)
+                li No PII are stored, we want to study how youtube algorithm, not you
+                li No IP address or username is stored, we keep associated the video watched to a pseudonym (which is dependent from a unique random cryptographic key every extension generate)
 
-        ul
-            li You have full access and ability to delete the data you submit
-            li No PII are stored, we want to study how youtube algorithm not you
-            li No IP address or username is stored, we keep associated the video watched to a pseudonym (which is your public key)
-            
-        h3 Public Key
-        p The public key is als
+    include footer
+                
 
