still savage, but ..

--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -1,9 +1,5 @@
-p.centered
-    span.bolder.yt-orange-f This is a SAVAGE ALPHA VERSION, don't use it: it is online only for a small amount of people providing revisions
-    br
-    span.yt-green-b.white This is a SAVAGE ALPHA VERSION, don't use it: it is online only for a small amount of people providing revisions
-    br
-    span.bolder.yt-red-f This is a SAVAGE ALPHA VERSION, don't use it: it is online only for a small amount of people providing revisions
+p.yt-red-b.white.centered
+    span This is a SAVAGE ALPHA VERSION, don't use it! it is online only for revisions, corageus singer of digital tales, and developers.
     
 nav.navbar.navbar-default.navbar-static-top
     div.container
