--- a/backend/sections/about.pug
+++ b/backend/sections/about.pug
@@ -28,7 +28,10 @@ html
     .container-fluid 
         p
             ul.yt--icon-list
-                li Reviews, testing and contributes from: ...
+                li Reviews, testing and contributes from: ... 
+                    smaller when you contribute, you can add yourself here. discuss your patch on the 
+                        a(href="https://github.com/tracking-exposed/yttrex/issues " target="_blank") issues
+                        |.
                 li Logo designed by 
                     a(href="https://twitter.com/lucacorsato" target="_blank") Luca Corsato
                     |, browser extension based on 
