--- a/backend/sections/footer.pug
+++ b/backend/sections/footer.pug
@@ -1,7 +1,3 @@
 .container-fluid.text.footer
-    smaller 
-        i know more: 
-        a(href="https://tracking.exposed") TREX
-        |  manifesto - 
-        a(href="https://facebook.tracking.exposed") fbTREX
-        |  the Facebook analysis.
+    smaller Is this website ugly designed? of course! UX and communication are not skills available in our team so far, if you can be of any help, please get in touch [support at tracking dot exposed], we don't have budget.
+        
