--- a/backend/sections/technicalities.pug
+++ b/backend/sections/technicalities.pug
@@ -92,6 +92,16 @@ html
         img.screencut(src="/images/special-link.png")
 
     .container-fluid.centered
+        h1 TODO: the divergency (when extension is NOT installed)
+        h1 TODO: the divergency page and the replay (when extension is installed)
+
+    .container-fluid.centered
+        h1 TODO: the results page.
+
+    .container-fluid.centered
+        h1 TODO: the results page.
+
+    .container-fluid.centered
         h3.left Every person with the link can provide their contributes pseudo-anonymously, my test user is 'citrus-gnocchi-oatmeal', you should ask to your friends which is their pseudonym. Except if you are doing the test with stranger, in this case you will only get a grasp of the massive differenciation YouTube apply.
 
         .ytslot.yt-green-b.spaced.white
