this website got announced by mistake, I want to make clear we cannot manage anything: sorry

--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -26,7 +26,21 @@ html
   body
 
     include header
-    
+
+    .container-fluid
+
+        .centered.highlight
+            h1 THIS IS NOT WORKING!
+            h1 DON'T USE IT (YET)
+        .centered.highlight
+            h3 this website has been announced by mistake, you shouldn't be here, bzzzz fly away!
+        .centered.highlight
+            h1 if you want to give a look at the code you are welcome, but we'll address this soon.
+        .centered.highlight
+            h1 we promise: we'll deliver a black and white, no color, website
+        .centered.highlight
+            h3 the goal was to do $blahblah, but instead it happen $blah, and now we've to manage $blah. Anyway, the path is clear; ride on!
+
     .container-fluid.ytslot.highlight
         .col-md-4.right
             h3 
