restructured a more polite gfx frontpage

--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -1,7 +1,7 @@
 p.yt-red-b.white.centered
     span This is a SAVAGE ALPHA VERSION, don't use it! it is online only for revisions, corageus singer of digital tales, and developers.
     
-nav.navbar.navbar-default.navbar-static-top
+nav.navbar.navbar-default.navbar-static-top(style="font-size:1.5em;")
     div.container
         div.navbar-header
             button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
@@ -20,6 +20,8 @@ nav.navbar.navbar-default.navbar-static-top
                         b  You
                 li
                     a(href="/technicalities") How does it work?
+                li
+                    a(href="/about-us") About
                 li
                     a(href="https://github.com/tracking-exposed/yttrex") code 
                         img.githublogo(src="/images/github-256.png")
