--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -27,70 +27,18 @@ html
 
     include header
     
-    .container-fluid.ytslot.highlight
-        .col-md-4.right
-            h3 
-                i "...I never understand if the algorithm-accountability is paranoia, old-media-babycry, or an actual systemic issue..."
-        .col-md-4.centered.bolder
-            h1 
-                br
-                | These days are over!
-        .col-md-4.left.bolder
-            h2 ytTREX gives you data, instead of aneddoct! Test is out on you
+    .container-fluid.padded
+        h3 youtube.tracking.exposed (ytTREX) is free software project deisnged to help study, uncover and then visualize the reccomentation algorithms in YouTube.
+        h3 It is a prototype, part of a great 
+            a(href="https://tracking.exposed") project
+            |  on algorithmic bias and filter bubbles in social networks, Google, and other products large tech companies make.
 
-    .container-fluid.spaced
+        h3 YouTube is a private actor, but has a very public role in governing how information circulates online. Algorithms are political, you should be able to see their impact.
+
+        h3 The browser extension are barely working, the UX is barely working, this project is announced at 35c3 as part of the panel: 
+            a(href="") Analyzing the Facebook algorithm and reclaim algorithm sovreignty
+            |. The goal of this non working release is to attract interested hackers, data analysts, or human scientists interested in research on the impact of personalization algorithms.
+
+    .container-fluid.spaced.padded
         include downloads
-
-    .container-fluid
-        .col-md-6.ytslot.yt-red-b.white.right
-            h1 YouTube is a private actor, but is getting a public role in governing how information circulate
-                .left know more 
-                    a(href="#carosello") ↓ 
-        .col-md-6.ytslot.yt-green-b.white.left
-            h1 To measure and judge the algorithm, you have to 
-                span.yt-red-f.bolder compare the tailored experiences 
-                | with someone else, different or similar to you
-
-    .container-fluid.spaced
-
-        .col-md-6.ytslot.yt-green-b.right.white
-            h2 Algorithms are political
-            h2 You can see their impact
-            h3 This can't be considered just legitimate business interest
-
-        .col-md-6.ytslot.yt-red-b.white.left
-            h1 Google's promises of 
-                i transparency 
-                | are pointless without having the users knowing what an algorithm is 
-
-
-    .container-fluid.spaced#carosello
-        include carousel
-
-    .container-fluid.spaced
-        include downloads
-
-    .container-fluid
-        .yt-orange-b
-            h1 Check out how much your suggested video diverge from the one of the others. ytTREX: 
-                span.white.bolder an educative project 
-                |  to show why algorithms matter!
-        h2.centered.negative 
-            i at this point you should have installed the extension
-                br
-                | [ or check the boxes below ]
-
-    .container-fluid.spaced.bolder
-        a(href="/technicalities") 
-            .col-md-6.ytslot.yt-green-b.right
-                h2.highlight.white How does it work?
-                    br 
-                    | How can be used?
-
-        a(href="/about-us") 
-            .col-md-6.ytslot.yt-green-b.left
-                h1.highlight.white About us
-
-
-
 
