--- a/backend/styles/index.styl
+++ b/backend/styles/index.styl
@@ -31,6 +31,10 @@ body
     margin-top 10px
     margin-bottom 10px
 
+.padded
+    padding-left 10%
+    padding-right 10%
+
 .white
     color white
 
