few changes in progress in the index style and simple comms

--- a/backend/sections/about.pug
+++ b/backend/sections/about.pug
@@ -37,8 +37,11 @@ html
                     |, browser extension based on 
                     a(href="https://twitter.com/vrde" target="_blank") Alberto Granzotto
                     |.
-                li Project lead is 
+                li The project is lead by
                     a(href="https://twitter.com/_vecna" target="_blank") Claudio Agosti
+                    |, and important feedback and help comes from 
+                    a(href="https://twitter.com/_hackbunny") Giulia Q.
+                    |   and the anonymous friend who opt-out from here ;)
                 li code 
                     a(href="https://github.com/tracking-exposed/yttrex/graphs/contributors" target="_blank") contributors
                     |.
