--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -15,7 +15,7 @@ html
 
     meta(property="og:title" content="ytTREX")
     meta(property="og:type" content="website")
-    meta(property="og:description" content="youtube.TREX is an educative project to explain how algorithms have emergent properties to mess up with our collective understanding. TL;DR: see how you and your friends get personalized perceptions")
+    meta(property="og:description" content="youtube.TREX is a browser extension to collect the related video suggested by yt algorthim. It is intended to let people collect personalized evidences and later compare them with others")
     meta(property="og:url" content="https://youtube.tracking.exposed")
     meta(property="og:image" content="https://youtube.tracking.exposed/images/youtube-trex-logo.png")
     meta(property="og:image:width" content="1000")
@@ -28,13 +28,13 @@ html
     include header
     
     .container-fluid.padded
-        h3 youtube.tracking.exposed (ytTREX) is free software project designed to help study, uncover and then visualize the reccomentation algorithms in YouTube.
-        h3 It is a prototype, part of a greater 
+        h3 Note
+        p youtube.tracking.exposed (ytTREX) is free software project designed to help study, uncover and then visualize the reccomentation algorithms in YouTube.
+        p It is a prototype, part of a greater 
             a(href="https://tracking.exposed") project
             |  on algorithmic bias and filter bubbles in social networks, Google, and other products large tech companies make.
 
-        h3 YouTube is a private actor, but has a very public role in governing how information circulates online. Algorithms are political, you should be able to see their impact.
-
+    
         h3 The browser extension are barely working, the UX is barely working, this project is announced at 35c3 as part of the panel: 
             a(href="https://fahrplan.events.ccc.de/congress/2018/Fahrplan/events/9797.html") Analyzing the Facebook algorithm and reclaim algorithm sovreignty
             |. The goal of this non working release is to attract interested hackers, data analysts, or human scientists interested in research on the impact of personalization algorithms.
