upgraded nodemon to 1.18.9 and fixed the homepage comms

--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -1,6 +1,3 @@
-p.yt-red-b.white.centered
-    span This is a SAVAGE ALPHA VERSION, don't use it! it is online only for revisions, corageus singer of digital tales, and developers.
-    
 nav.navbar.navbar-default.navbar-static-top(style="font-size:1.5em;")
     div.container
         div.navbar-header
@@ -13,17 +10,7 @@ nav.navbar.navbar-default.navbar-static-top(style="font-size:1.5em;")
         div.collapse.navbar-collapse(id="thenavbar")
             ul.nav.navbar-nav
                 li
-                    a(href='/') Install
-                li
-                    a(href='/privacy-statement') Privacy, a.k.a we respect 
-                        s your data
-                        b  You
-                li
-                    a(href="/technicalities") How does it work?
-                li
-                    a(href="/about-us") About
-                li
-                    a(href="https://github.com/tracking-exposed/yttrex") code 
+                    a(href="https://github.com/tracking-exposed/yttrex") github repo
                         img.githublogo(src="/images/github-256.png")
                 li
-                    a(target="_blank" href='https://tracking.exposed') Manifesto ☛ 
+                    a(target="_blank" href='https://tracking.exposed') Community Manifesto ☛ 
