--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -28,16 +28,19 @@ html
     include header
     
     .container-fluid.padded
+
         h3 Note
         p youtube.tracking.exposed (ytTREX) is free software project designed to help study, uncover and then visualize the reccomentation algorithms in YouTube.
         p It is a prototype, part of a greater 
             a(href="https://tracking.exposed") project
             |  on algorithmic bias and filter bubbles in social networks, Google, and other products large tech companies make.
 
+        p.yt-red-b.white.centered
+            span This is a NON WORKING ALPHA VERSION, don't use it! it is online only for concept feedback and developers.
     
-        h3 The browser extension are barely working, the UX is barely working, this project is announced at 35c3 as part of the panel: 
+        h3 This project been announced at 35c3 as part of the panel: 
             a(href="https://fahrplan.events.ccc.de/congress/2018/Fahrplan/events/9797.html") Analyzing the Facebook algorithm and reclaim algorithm sovreignty
-            |. The goal of this non working release is to attract interested hackers, data analysts, or human scientists interested in research on the impact of personalization algorithms.
+            |. The goal of this non working release is to attract interested hackers, data analysts, or human scientists interested in research on the impact of personalization algorithms in youtube.
 
     .container-fluid.spaced.padded
         include downloads
