glued ytparserv and rebooted project ready to delivah

--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -13,4 +13,6 @@ nav.navbar.navbar-default.navbar-static-top(style="font-size:1.5em;")
                     a(href="https://github.com/tracking-exposed/yttrex") github repo
                         img.githublogo(src="/images/github-256.png")
                 li
-                    a(target="_blank" href='https://tracking.exposed') Community Manifesto ☛ 
+                    a(href='/data') play with the data
+                li
+                    a(href='/about') about
