--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -29,19 +29,25 @@ html
     
     .container-fluid.padded
 
-        h3 Note
-        p youtube.tracking.exposed (ytTREX) is free software project designed to help study, uncover and then visualize the reccomentation algorithms in YouTube.
-        p It is a prototype, part of a greater 
-            a(href="https://tracking.exposed") project
-            |  on algorithmic bias and filter bubbles in social networks, Google, and other products large tech companies make.
-
-        p.yt-red-b.white.centered
-            span This is a NON WORKING ALPHA VERSION, don't use it! it is online only for concept feedback and developers.
-    
-        h3 This project been announced at 35c3 as part of the panel: 
-            a(href="https://fahrplan.events.ccc.de/congress/2018/Fahrplan/events/9797.html") Analyzing the Facebook algorithm and reclaim algorithm sovreignty
-            |. The goal of this non working release is to attract interested hackers, data analysts, or human scientists interested in research on the impact of personalization algorithms in youtube.
+        h3 Welcome
+        p This tool provide a small experimental infrastructure for youtube algorithm analysis
 
     .container-fluid.spaced.padded
         include downloads
+
+        h3 API / services
+        p This section should be improved, based on the needs expressed by researcher, anaysts or youtubers, we'll develop proper interface.
+        p Whatver you ask to us, keep in mind: 
+            b this tool is mean to analyze youtube, not the content producer, not the content consumers
+            |.
+        ul
+            li Last contributions
+            li 
+                a(href="/compare") Compare videos
+
+        h3 Know more
+        p
+            a(href="https://tracking.exposed") Tracking Exposed
+            |: we fight for a web which is home of the many and not for the few
+        
 
