added project analysis

--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -29,25 +29,30 @@ html
     
     .container-fluid.padded
 
-        h3 Welcome
-        p This tool provide a small experimental infrastructure for youtube algorithm analysis
+        p A tool providing a small experimental infrastructure for the youtube algorithm analysis
+        p This is far to be completed, but is a good beginning. To see our process, you can read the first two years of experiences made with facebook.tracking.exposed, or read the spring 2019 youtute.tracking.exposed roadmap.
 
     .container-fluid.spaced.padded
         include downloads
 
-        h3 API / services
-        p This section should be improved, based on the needs expressed by researcher, anaysts or youtubers, we'll develop proper interface.
+        h2 experimental services and APIs
         p Whatver you ask to us, keep in mind: 
             b this tool is mean to analyze youtube, not the content producer, not the content consumers
             |.
         ul
             li Last contributions
             li 
-                a(href="/compare") Compare videos
+                a(class="yellow" href="/compare") Compare videos
 
-        h3 Know more
+    .container-fluid.spaced.padded
+        include analysis
+
+    .container-fluid.spaced.padded
+        h2 Why? 
         p
-            a(href="https://tracking.exposed") Tracking Exposed
+            a(class="yellow" href="https://tracking.exposed") Tracking Exposed
             |: we fight for a web which is home of the many and not for the few
+        h2 :D
+
         
 
