--- a/backend/styles/index.styl
+++ b/backend/styles/index.styl
@@ -92,6 +92,15 @@ img
     line-height: 2em;
 }
 
+a
+    background yellow
+    border-bottom 3px double
+
+h2
+    padding 10px
+    background black
+    color white
+
 .text
     margin-left 8%
     padding-left 2%
